hello-app-iap/manifests/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: deployment
  labels:
    app: iap
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: iap
    spec:
      containers:
      - name: hello-app-iap-container
        image: gcr.io/lxn-training/hello-app-iap:v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          protocol: TCP
        - containerPort: 8082
          protocol: TCP
