hello-app-iap/manifests/service1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service1
  labels:
    type: iap-srv
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort 
  ports:
  - name: web1
    port: 8081
    protocol: TCP
    targetPort: 8081        
  selector:
    app: iap
