hello-app-iap/manifests/service2.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service2
  labels:
    type: iap-srv
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "config-default"}'
spec:
  type: NodePort 
  ports:
  - name: web2
    port: 8082
    protocol: TCP
    targetPort: 8082       
  selector:
    app: iap
